Add swagger for locations
