# swagger/v1/swagger.yaml
@@ -4,6 +4,119 @@ info:
   title: API V1
   version: v1
 paths:
+  "/api/v1/locations":
+    post:
+      summary: Creates new location for pair
+      tags:
+      - Location
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      security:
+      - Bearer: {}
+      parameters:
+      - name: Authorization
+        in: header
+        description: Bearer <token>
+        required: true
+        schema:
+          type: string
+      - name: data
+        in: body
+        required: true
+        schema:
+          type: object
+          properties:
+            lat:
+              type: string
+            lng:
+              type: string
+          required:
+          - lat
+          - lng
+          example:
+            lat: "-15.19750"
+            lng: '108.35723'
+      responses:
+        '401':
+          description: Cant find user for given token
+          examples:
+            application/json:
+              error: Unauthorized
+        '200':
+          description: Pair already finished race, location not created
+          examples:
+            application/json: {}
+        '201':
+          description: Location created
+          examples:
+            application/json:
+              id: 58
+              lat: "-15.1975"
+              lng: '108.35723'
+              pair_id: 293
+              created_at: '2020-02-16T17:45:14.672Z'
+              updated_at: '2020-02-16T17:45:14.672Z'
+  "/api/v1/locations/latest":
+    get:
+      summary: Fetches last location for each pair
+      tags:
+      - Location
+      produces:
+      - application/json
+      parameters:
+      - name: Authorization
+        in: header
+        description: Bearer <token>
+        required: true
+        schema:
+          type: string
+      security:
+      - Bearer: {}
+      responses:
+        '401':
+          description: Cant find user for given token
+          examples:
+            application/json:
+              error: Unauthorized
+        '200':
+          description: Returns locations sorted by ranking ASC
+          examples:
+            application/json:
+            - id: 62
+              lat: "-2.0"
+              lng: '0.0'
+              pair_id: 295
+              created_at: '2020-02-16T17:45:14.729Z'
+              updated_at: '2020-02-16T17:45:14.729Z'
+              pair:
+                id: 295
+                finished: false
+                pair_nr: 1
+                created_at: '2020-02-16T17:45:14.721Z'
+                updated_at: '2020-02-16T17:45:14.721Z'
+                users:
+                - id: 590
+                  first_name: first_name14
+                  last_name: last_name14
+                  email: email14@example.org
+                  verified_login: false
+                  created_at: '2020-02-16T17:45:14.735Z'
+                  updated_at: '2020-02-16T17:45:14.735Z'
+                  phone: '748410320'
+                  city: Kraków
+                  pair_id: 295
+                - id: 589
+                  first_name: first_name13
+                  last_name: last_name13
+                  email: email13@example.org
+                  verified_login: false
+                  created_at: '2020-02-16T17:45:14.732Z'
+                  updated_at: '2020-02-16T17:45:14.732Z'
+                  phone: '376958309'
+                  city: Kraków
+                  pair_id: 295
   "/api/v1/login":
     post:
       summary: Sends verification code
@@ -75,18 +188,18 @@ paths:
           description: Verification code and emails are correct, token is returned
           examples:
             application/json:
-              token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxNTl9.pW9sdV1Vxrau3L-_33AvRF3zh_RdU_CWvGlDCT2Wf24
+              token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjo1OTV9.evG69fj1Clp3eKlVTx5czjVRUdj45hmFKa1Z7GP-iuw
               user:
-                id: 159
-                first_name: first_name3
-                last_name: last_name3
+                id: 595
+                first_name: first_name17
+                last_name: last_name17
                 email: john@example.org
                 verified_login: false
-                created_at: '2020-02-15T03:22:04.259Z'
-                updated_at: '2020-02-15T03:22:04.259Z'
-                phone: '613697109'
+                created_at: '2020-02-16T17:45:14.946Z'
+                updated_at: '2020-02-16T17:45:14.946Z'
+                phone: '738650054'
                 city: Kraków
-                pair_id: 80
+                pair_id: 298
         '401':
           description: |-
             Verification code and emails are incorrect,
@@ -94,3 +207,8 @@ paths:
           examples:
             application/json:
               error: No user matching credentials
+securityDefinitions:
+  Bearer:
+    type: apiKey
+    name: Authorization
+    in: header
